# AbFold-Extended

./: README.md  pyproject.toml  train_ema.py  training_config.py
abfold/: angle_resnet.py  attention.py  backbone_update.py  config.py  data_module.py  global_predict.py  ipa.py  model.py  train_ema.py  training_config.py  transition.py
abfold/data/: align_two_seqs.py  data_pipeline.py  data_process.py  data_transforms.py  feature_pipeline.py  input_pipeline.py  mmcif_parsing.py
abfold/diffusion/: sample.py
abfold/np/: protein.py  residue_constants.py
abfold/np/relax/: amber_minimize.py  relax.py  utils.py
abfold/utils/: __init__.py  checkpointing.py  chunk_utils.py  exponential_moving_average.py  feats.py  loss.py  lr_schedulers.py  rigid_utils.py  seed.py  superimposition.py  suppress_output.py  tensor_utils.py  unsupervised_loss.py  validation_metrics.py
abfold/utils/ESMFold/: model.py
abfold/utils/kernel/: attention_core.py
abfold/utils/kernel/csrc/: compat.h  softmax_cuda.cpp  softmax_cuda_kernel.cu
